# merit-ai

./: README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agents/: html_modifier.py
frontend/: Dockerfile  nginx.conf
frontend/src/: App.js  Dashboard.js  Editor.js  TemplateLibrary.js
